syntax = "proto3";

option java_package = "server";

import "google/protobuf/empty.proto";

service BackupService {
    rpc createBackup(CreateBackupRequest) returns (Backup);
    rpc getBackup(GetBackupRequest) returns (Backup);
    rpc listBackup(ListBackupsRequest) returns (ListBackupsResponse);
    rpc deleteBackup(DeleteBackupRequest) returns (google.protobuf.Empty);
} 


message Backup {
    string name = 1;
    string display_name = 2;
}

message CreateBackupRequest {
    string backup_id = 1;
    Backup backup  = 2;
}

message GetBackupRequest {
  string name = 1; 
}

message ListBackupsRequest {
}

message ListBackupsResponse {
    repeated Backup backups = 1;
}

message DeleteBackupRequest {
    string name = 1;
}